force-app/main/default/objects/Attendee__c/Attendee__c.object-meta.xml
<CustomObject>
    <description>All the people who will be part of a meeting.</description>
    <label>Attendee</label>
    <nameField>
        <displayFormat>Attendee-{000000}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendee</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>