force-app/main/default/objects/Attendee__c/fields/AgendaId__c.field-meta.xml
<CustomField>
    <fullName>AgendaId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates where it comes from</description>
    <label>Agenda</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Agenda__c.MeetingId__c</field>
            <operation>equals</operation>
            <valueField>$Source.MeetingId__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Agenda__c</referenceTo>
    <relationshipLabel>Attendee Of Agenda</relationshipLabel>
    <relationshipName>AttendeeOfAgenda</relationshipName>
    <type>Lookup</type>
</CustomField>