force-app/main/default/objects/Attendee__c/fields/CreatedFromAttendeeId__c.field-meta.xml
<CustomField>
    <fullName>CreatedFromAttendeeId__c</fullName>
    <label>Attendee Template</label>
    <length>50</length>
    <type>Text</type>
</CustomField>