force-app/main/default/objects/Attendee__c/fields/EmployeeId__c.field-meta.xml
<CustomField>
    <fullName>EmployeeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Attendee</relationshipLabel>
    <relationshipName>EmployeesAttendees</relationshipName>
    <type>Lookup</type>
</CustomField>