force-app/main/default/objects/Attendee__c/fields/HasConfirmed__c.field-meta.xml
<CustomField>
    <fullName>HasConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Confirmed</label>
    <type>Checkbox</type>
</CustomField>