force-app/main/default/objects/Attendee__c/fields/IsTemplate__c.field-meta.xml
<CustomField>
    <fullName>IsTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should this record used as template with meeting template?</description>
    <label>Is Template</label>
    <type>Checkbox</type>
</CustomField>