force-app/main/default/objects/Attendee__c/fields/JoinedBy__c.field-meta.xml
<CustomField>
    <fullName>JoinedBy__c</fullName>
    <defaultValue>&#39;Meeting Organizer&#39;</defaultValue>
    <label>Joined By</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Key Word</fullName>
            </value>
            <value>
                <fullName>Organizer</fullName>
                <default>true</default>
                <label>Organizer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>