force-app/main/default/objects/Attendee__c/fields/KeyWords__c.field-meta.xml
<CustomField>
    <fullName>KeyWords__c</fullName>
    <description>Informational field, just to let people know which key word was used to join the attendee to the meeting.</description>
    <label>Key-Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>