force-app/main/default/objects/Attendee__c/fields/MeetingId__c.field-meta.xml
<CustomField>
    <fullName>MeetingId__c</fullName>
    <label>Meeting</label>
    <referenceTo>Meeting__c</referenceTo>
    <relationshipLabel>Attendee</relationshipLabel>
    <relationshipName>MeetingsAttendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>