force-app/main/default/objects/Attendee__c/fields/StatusEmail__c.field-meta.xml
<CustomField>
    <fullName>StatusEmail__c</fullName>
    <label>Status E-Mail</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Not Sent</fullName>
            </value>
            <value>
                <fullName>Error found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>